--- a/SWP/Week2/SourceCode/SWP/nbproject/project.properties
+++ b/SWP/Week2/SourceCode/SWP/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.5.jar=fileuploadlib\\commons-fileupload-1.5.jar
+file.reference.commons-io-2.11.0.jar=fileuploadlib\\commons-io-2.11.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=TOOLS\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=TOOLS\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.sqljdbc42.jar=TOOLS\\sqljdbc42.jar
@@ -42,7 +44,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.commons-fileupload-1.5.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
