Change pass and Reset

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /SWP/Week1/SourceCode/SWP/build/
 /SWP/Week1/SourceCode/SWP/nbproject/private/
+/SWP/Week2/SourceCode/SWP/build/
+/SWP/Week2/SourceCode/SWP/nbproject/private/
