--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /SWP/Week1/SourceCode/SWP/nbproject/private/
 /SWP/Week2/SourceCode/SWP/build/
 /SWP/Week2/SourceCode/SWP/nbproject/private/
+SWP/Week2/SourceCode/SWP/nbproject/private/private.properties
+SWP/Week2/SourceCode/SWP/nbproject/project.properties
