--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /SWP/Week2/SourceCode/SWP/nbproject/private/
 SWP/Week2/SourceCode/SWP/nbproject/private/private.properties
 SWP/Week2/SourceCode/SWP/nbproject/project.properties
+*.properties
+*.properties
