--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ SWP/Week3/SourceCode/SWP/nbproject/private/private.properties
 SWP/Week2/SourceCode/SWP/nbproject/private/private.xml
 SWP/Week2/SourceCode/SWP/nbproject/private/private.properties
 SWP/Week2/SourceCode/SWP/nbproject/project.properties
+*.properties
