--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ SWP/Week2/SourceCode/SWP/nbproject/private/private.xml
 SWP/Week2/SourceCode/SWP/nbproject/private/private.properties
 SWP/Week2/SourceCode/SWP/nbproject/project.properties
 *.properties
+SWP/Week2/SourceCode/SWP/nbproject/private/private.xml
+SWP/Week3/SourceCode/SWP/nbproject/private/private.xml
