--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ SWP/Week2/SourceCode/SWP/nbproject/project.properties
 *.properties
 SWP/Week2/SourceCode/SWP/nbproject/private/private.xml
 SWP/Week3/SourceCode/SWP/nbproject/private/private.xml
+/SWP/Week3/SourceCode/SWP/nbproject/private/
+/SWP/Week3/SourceCode/SWP/build/
