--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ SWP/Week2/SourceCode/SWP/nbproject/project.properties
 SWP/Week2/SourceCode/SWP/nbproject/private/private.xml
 SWP/Week3/SourceCode/SWP/nbproject/private/private.xml
 
+/SWP/Week4/SourceCode/SWP/dist/
