--- a/SWP/Week5/SourceCode/SWP/nbproject/project.properties
+++ b/SWP/Week5/SourceCode/SWP/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.commons-fileupload-1.5.jar=fileuploadlib\\commons-fileupload-1.5.
 file.reference.commons-io-2.11.0.jar=fileuploadlib\\commons-io-2.11.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=TOOLS\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=TOOLS\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.mail.jar=E:\\hocjava\\javaWeb\\c1\\lib\\CopyLibs\\mail.jar
 file.reference.sqljdbc42.jar=TOOLS\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.commons-fileupload-1.5.jar}:\
-    ${file.reference.commons-io-2.11.0.jar}
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
