--- a/SWP/Week5/SourceCode/SWP/nbproject/project.properties
+++ b/SWP/Week5/SourceCode/SWP/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.commons-io-2.11.0.jar=fileuploadlib\\commons-io-2.11.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=TOOLS\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=TOOLS\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mail.jar=E:\\hocjava\\javaWeb\\c1\\lib\\CopyLibs\\mail.jar
+file.reference.mail.jar-1=TOOLS\\mail.jar
 file.reference.org.json.jar=TOOLS\\org.json.jar
 file.reference.sqljdbc42.jar=TOOLS\\sqljdbc42.jar
 includes=**
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.5.jar}:\
     ${file.reference.commons-io-2.11.0.jar}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.org.json.jar}
+    ${file.reference.org.json.jar}:\
+    ${file.reference.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
