--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /SWP/Week4/SourceCode/SWP/dist/
 /SWP/Week5/SourceCode/SWP/dist/
+/SWP/Week3/SourceCode/SWP/nbproject/private/
+/SWP/Week3/SourceCode/SWP/build/
