--- a/SWP/Week6/SourceCode/SWP/nbproject/private/private.properties
+++ b/SWP/Week6/SourceCode/SWP/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\FPT\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-file.reference.mail.jar=E:\\swp391\\SWP391_Project\\SWP\\Week5\\SourceCode\\SWP\\TOOLS\\mail.jar
+file.reference.mail.jar=D:\\Linh123\\SWP391_Project\\SWP\\Week6\\SourceCode\\SWP\\TOOLS\\mail.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
