--- a/SWP/Week7/SourceCode/SWP/nbproject/private/private.properties
+++ b/SWP/Week7/SourceCode/SWP/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\Phan Nguyen Tu Anh\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-file.reference.mail.jar=D:\\SWP391project\\SWP391_Project\\SWP\\Week7\\SourceCode\\SWP\\TOOLS\\mail.jar
+deploy.ant.properties.file=C:\\Users\\ACER\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.mail.jar=D:\\Document\\hoc tren lop\\Summer2023\\SWP391-Group5\\SWP\\Week7\\SourceCode\\SWP\\TOOLS\\mail.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Phan Nguyen Tu Anh\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\ACER\\AppData\\Roaming\\NetBeans\\13\\build.properties
 
