--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /SWP/Week6/SourceCode/SWP/nbproject/private/
 /SWP/Week6/SourceCode/SWP/build/
 /SWP/Week6/SourceCode/SWP/dist/
+/SWP/Week7/SourceCode/SWP/nbproject/private/
+/SWP/Week7/SourceCode/SWP/dist/
+/SWP/Week7/SourceCode/SWP/build/
