--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /SWP/Week7/SourceCode/SWP/nbproject/private/
 /SWP/Week7/SourceCode/SWP/dist/
 /SWP/Week7/SourceCode/SWP/build/
+/SWP/Week4/SourceCode/SWP/build/
+/SWP/Week2/SourceCode/SWP/build/
+/SWP/Week1/SourceCode/SWP/build/
+/SWP/Week1/SourceCode/SWP/nbproject/private/
