--- a/SWP/Week7/SourceCode/SWP/nbproject/private/private.properties
+++ b/SWP/Week7/SourceCode/SWP/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\Uslaptop\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-file.reference.mail.jar=D:\\Linh123\\SWP391_Project\\SWP\\Week7\\SourceCode\\SWP\\TOOLS\\mail.jar
+deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.mail.jar=C:\\Users\\admin\\OneDrive\\Desktop\\code tr\u01b0\u1edbc khi up git\\SourceCode\\SWP\\TOOLS\\mail.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Uslaptop\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\13\\build.properties
 
