--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /SWP/Week2/SourceCode/SWP/build/
 /SWP/Week1/SourceCode/SWP/build/
 /SWP/Week1/SourceCode/SWP/nbproject/private/
+/SWP/Week9/SourceCode/SWP/build/
+/SWP/Week9/SourceCode/SWP/dist/
+/SWP/Week9/SourceCode/SWP/nbproject/private/
